app/src/main/java/com/example/truckercore/model/errors/domain/contracts/DomainErrorCode.kt
package com.example.truckercore.model.errors.domain.contracts

interface DomainErrorCode